start integrate with backend

--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -1,25 +1,17 @@
 {
-  "homeView": "ماذا تريد أن تشاهد؟",
-  "search": "بحث",
-  "home":"القائمة الرئيسية",
-  "watchList": "قائمة المشاهدة",
-  "Details": "التفاصيل",
+  "Search": "بحث",
   "signUp": "التسجيل",
   "signIn": "تسجيل الدخول",
   "haveAnAccount": "هل لديك حساب؟ قم بتسجيل الدخول",
   "noAccount": "ليس لديك حساب؟ قم بالتسجيل",
-  "searchInfoToolTip": "ابحث حسب عنوان الفيلم أو اسم النوع",
   "Download":"تحميل",
-  "About Movie" :"حول الفيلم",
-  "Review":"المراجعة",
-  "WhatDoYouWantToWatch": "ماذا تريد أن تشاهد ؟ ",
-  "Upcoming":"القادمة",
-  "TopRated": "الأعلى تقييمًا",
-  "Popular": "شائع",
-  "profile": "الصفحه الشخصية",
+  "Profile": "الصفحه الشخصية",
   "update":"تعديل",
   "password":"برجاء ادخال الباسورد",
   "email":"برجاء ادحال الميل",
-  "confirmPassword":"برجاء تاكيد الباسورد"
+  "confirmPassword":"برجاء تاكيد الباسورد",
+   "Home": "القائمة الرئيسية",
+   "nextDays": "الايام السبعه القادمه"
+
 
 }
