add report and urlLancher

--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -11,7 +11,13 @@
   "email":"برجاء ادحال الميل",
   "confirmPassword":"برجاء تاكيد الباسورد",
    "Home": "القائمة الرئيسية",
-   "nextDays": "الايام السبعه القادمه"
+   "nextDays": "الايام السبعه القادمه",
+   "signInWithGoogle": "التسجيل باستخدام جوجل",
+   "Submit": "ارسال",
+   "Cancel": "الغاء",
+   "Email": "الايميل",
+   "Whats": "واتساب",
+   "Phone": "فون"
 
 
 }
